# tree-sitter-catala

./: .gitignore  Cargo.toml  Cargo.toml.in  Makefile  README.md  binding.gyp  catala-ts-mode.el  catala.el  grammar.header.js  grammar.js  header.js  package-lock.json  package.json  tree-sitter.json
catala_code_en/: Cargo.toml
catala_code_en/src/: grammar.json  parser.c
catala_code_fr/: Cargo.toml
catala_code_fr/src/: grammar.json  node-types.json  parser.c
catala_code_pl/: Cargo.toml
catala_code_pl/src/: grammar.json  node-types.json
catala_en/src/: parser.c
catala_expr_en/: Cargo.toml
catala_expr_en/src/: grammar.json  parser.c
catala_expr_fr/: Cargo.toml
catala_expr_fr/src/: grammar.json  node-types.json  parser.c
catala_expr_pl/: Cargo.toml
catala_pl/: Cargo.toml
en/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
en/src/: grammar.json  (+2 more)
fr/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
fr/bindings/c/: tree-sitter-catala_fr.h  tree-sitter-catala_fr.pc.in
fr/bindings/go/: binding.go  binding_test.go  go.mod
fr/bindings/node/: binding.cc
fr/bindings/python/tree_sitter_catala_fr/: __init__.py  binding.c
fr/bindings/rust/: build.rs  lib.rs
fr/src/: grammar.json  node-types.json  parser.c
pl/: Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
queries/: highlights.scm  hightlights.scm
src/: grammar.json  node-types.json  parser.c
(+27 files in other folders)
